--- a/source/components/header.hbs
+++ b/source/components/header.hbs
@@ -1,5 +1,5 @@
 <header>
-    <img src="/feri.jpg" alt="Farzad Yousefzadeh" />
+    <img src="/assets/feri.jpg" alt="Farzad Yousefzadeh" />
     <h1>Farzad Yousefzadeh</h1>
     <nav>
         <ul>
@@ -11,3 +11,29 @@
         <a>Follow @farzad_yz on Twitter</a>
     </nav>
 </header>
+<link rel="stylesheet" href="//unpkg.com/@highlightjs/cdn-assets@10.5.0/styles/atom-one-dark.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+<style>
+    body {
+        font-family: 'IBM Plex Sans',
+            sans-serif;
+    }
+
+    pre,
+    code {
+        font-family: 'IBM Plex Mono',
+            monospace;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: 'IBM Plex Serif',
+    }
+</style>
