got handlebars working

--- a/source/pages/blog.hbs
+++ b/source/pages/blog.hbs
@@ -1,4 +1,4 @@
-<div class="layout-container-limited">
+<div class="site-container">
     {{>header}}
     {{#each blogPosts}}
     <article style="margin-bottom: 3rem;">
