--- a/source/pages/talks.hbs
+++ b/source/pages/talks.hbs
@@ -1,4 +1,4 @@
-<div class="talks" data-js-id="talks">
+<div class="site-container">
     {{>header}}
     {{#each talks}}
     <section class="talk-head">
