--- a/source/pages/cv.hbs
+++ b/source/pages/cv.hbs
@@ -1,4 +1,4 @@
-<div class="layout-container-limited">
+<div class="site-container">
     {{>header}}
     <div style="display: flex; justify-content: flex-end;"><button class="hidden-print download-button"
             style="color: rgb(44, 55, 62); border-color: rgb(44, 55, 62); padding: 0.5rem 0.75rem; font-size: 1rem;">Download
